httpbin-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin
spec:
  selector:
    app: httpbin
  ports:
    - name: http
      port: 8080
      protocol: TCP
  type: ClusterIP
